2006-08-18  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (do-subst-texinfo-vals): Don't substitute
	%CANONICAL_HOST_TYPE%.

2006-08-17  John W. Eaton  <jwe@octave.org>

	* aclocal.m4 (OCTAVE_PROG_GHOSTSCRIPT, OCTAVE_PROG_MAKEINFO,
	OCTAVE_PROG_TEXI2DVI, OCTAVE_PROG_TEXI2PDF): New macros.
	* configure.in: Use them.  Maybe print warnings in summary.

2006-07-27  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (localapiarchlibdir): Substitute it here.
	(do-subst-default-vals): Include it in the sed command here.
	* configure.in (localapiarchlibdir): New variable.
	* octave-config.in: Don't quote %VAR% values.
	(LOCALAPIARCHLIBDIR): New variable.

2006-07-27  Thomas Weber  <thomas.weber.mail@gmail.com>

	* octave-config.in (OCTAVE_FCNFILEPATH, OCTAVE_IMAGEPATH,
	OCTAVE_LOCALFCNFILEPATH, OCTAVE_LOCALOCTFILEPATH): Delete variables.

2006-07-26  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in (Options): Accept -g.

	* configure.in: Check for exp2 and log2.

2006-07-25  David Bateman  <dbateman@free.fr>

	* mysparse.c: New file.

2006-06-27  John W. Eaton  <jwe@octave.org>

	* octMakefile.in (maintainer-clean distclean): Remove
	$(SHELL_SCRIPTS) instead of naming files individually.
	Also remove .gdbinit.

2006-06-21  John W. Eaton  <jwe@octave.org>

	* examples/myfeval.c, examples/myfevalf.f, examples/myhello.c,
	examples/myset.c, examples/mystruct.c: New files.

	* mkoctfile.in: New option, --mex.

2006-06-13  John W. Eaton  <jwe@octave.org>

	* configure.in (--enable-64): Include "(EXPERIMENTAL)" in help text.
	Also set warn_64_bit if no suitable type for octave_idx_type is found.
	If --enable-64 is specified, print warning in summary message.

2006-06-12  John W. Eaton  <jwe@octave.org>

	* aclocal.m4 (OCTAVE_CXX_BROKEN_REINTERPRET_CAST): New macro.
	* configure.in: Use it.
	* AH_BOTTOM: Conditionally define FCN_PTR_CAST here.

2006-06-08  John W. Eaton  <jwe@octave.org>

	* Makeconf.in (do-subst-default-vals): Also substitute
	OCTAVE_DATAROOTDIR.
